2009-04-20  Sven Joachim  <svenjoac@gmx.de>

	* NEWS, src/lastlog.c: Fix regression causing empty reports.
	Get the size of the file before printing the entries.

2009-04-20  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: Get rid of pwent. pwd is sufficient as long as it
	is always coming from xgetpwnam. There is no need to copy pwd to
	pwent, this was not a good idea anyway as the strings from pwd
	were not duplicated.
	* src/login.c: Always free the pwd and spwd structure when we
	retrieve a new one. This will clear the password of the previous
	user from the memory.
	* src/login.c: user_passwd is used to keep point to the password
	of the user being authenticated.
	* src/login.c: (non PAM) Fail if the user's entry cannot be found
	after the user updated her password (if expire() requested an
	update).
	* src/login.c: If the user does not exist on the system, there is
	no need to build a pwd structure (with shell).

2009-04-20  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: ttytype already checks for TTYTYPE_FILE and TERM.
	Just call ttytype.

2009-04-20  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: Open the PAM session before pam_setcred and before
	initgroups. This is more consistent with rfc86.0.

2009-04-20  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: Added helper functions get_pam_user() and
	get_failent_user().

2009-04-20  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: Added parameter to check_nologin. This will help
	getting rid of the global pwent variable.

2009-04-20  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: Added comments.
	* src/login.c: Close the user and group files before dropping root
	privileges.

2009-04-20  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: We do not need to keep the old umask. Discard the
	umask() return value.
